# ksj2gp

./: .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.ts  vitest.browser.config.ts
.github/: dependabot.yml
.github/workflows/: browser-tests.yaml  build.yaml  deploy.yaml  lint.yaml  rust-tests.yaml
docs/: design.md
npm/: ksj2gp_web.d.ts  package.json
rust/: .gitignore  Cargo.toml
rust/ksj2gp-cli/: Cargo.toml
rust/ksj2gp-cli/src/: main.rs
rust/ksj2gp-web/: Cargo.toml
rust/ksj2gp-web/src/: io.rs  lib.rs
rust/src/: builder.rs  encoding.rs  error.rs  io.rs  lib.rs  transform_coord.rs  zip.rs  zip_reader.rs
rust/src/crs/: epsg4301.json  epsg4612.json  epsg6668.json  mod.rs
rust/src/translate/: codelists.rs  colnames.rs  ksj_id.rs  mod.rs
rust/src/translate/data/: codelists.rs  colnames.rs  mod.rs
rust/src/writer/: geojson_writer.rs  geoparquet_writer.rs  gpkg_writer.rs  mod.rs
scripts/: generate_codelists.R  generate_colnames.R
src/: app.css  app.html  filesystem-api-shim.d.ts  main.ts  vitest-browser.d.ts  worker.ts
src/lib/: types.ts  worker.ts
src/lib/components/: Dropzone.svelte  Dropzone.test.ts  ErrorDialog.svelte  ErrorDialog.test.ts  ErrorDialogTestHost.svelte  HeroHeader.svelte  HeroHeader.test.ts  HeroHeaderTestHost.svelte  ShpDialog.svelte  ToggleRow.svelte  ToggleRow.test.ts  ToggleRowTestHost.svelte
src/lib/stores/: status.svelte.ts  status.ts
src/routes/: +layout.svelte  +page.svelte
vitest-example/: HelloWorld.test.ts
www/: index.html  package.json  pnpm-lock.yaml
www/src/: worker.ts
