[package]
name = "ksj2gp"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib"]

[dependencies]
geo-traits = "0.3.0"
geo-types = "0.7.17"

# GeoParquet
parquet = { version = "56.0.0", default-features = false }
geoparquet = "0.5.0"

# GeoArrow-related
arrow-array = "56.1.0"
arrow-schema = "56.0.0"
geoarrow-schema = "0.5.0"
geoarrow-array = "0.5.0"

# GeoArrow
geojson = "0.24.2"

# Shapefile
# Note: for compatibility with geo-traits 0.3, the Git version is required at the moment
shapefile = { git = "https://github.com/tmontaigu/shapefile-rs", version = "0.7.0", features = [
    "encoding_rs",
    "geo-traits",
    "geo-types",
] }
# since WASM build is broken with the crates.io version, use Git version: https://github.com/tmontaigu/dbase-rs/issues/100
dbase = { version = "0.6.1", features = ["encoding_rs"] }

# Read Zip file
zip = { workspace = true }

# for .chunk()
itertools = "0.14.0"
serde_json = "1.0.145"

encoding_rs = "0.8.35"

[workspace]
members = [
    "ksj2gp-cli",
    "ksj2gp-web"
]

[workspace.dependencies]
zip = { version = "5.1.1", default-features = false, features = ["deflate"] }
