[package]
name = "ksj2gp"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib"]

[dependencies]
geo-traits = { git = "https://github.com/yutannihilation/geo", branch = "feat/geo-traits-structs", version = "0.3.0", default-features = false, features = ["structs"] }

# GeoParquet
parquet = { version = "57.0.0", default-features = false }
geoparquet = "0.7.0"

# GeoArrow-related
arrow-array = "57.0.0"
arrow-schema = "57.0.0"
geoarrow-schema = "0.7.0"
geoarrow-array = "0.7.0"
geoarrow-geojson = "0.7.0"

# Shapefile
# Note: this is needed for
#   - compatibility with geo-traits 0.3
#   - geo-traits for polygon (cf. https://github.com/tmontaigu/shapefile-rs/pull/38#issuecomment-2560436702)
shapefile = { git = "https://github.com/tmontaigu/shapefile-rs", version = "0.7.0", features = [
    "encoding_rs",
    "geo-traits",
    "geo-types",
] }
dbase = { version = "0.6.1", features = ["encoding_rs"] }

# Read Zip file
zip = { workspace = true }

# for .chunk()
itertools = "0.14.0"

encoding_rs = "0.8.35"
regex = { version = "1.11.3", default-features = false, features = ["std"] }
proj4rs = { version = "0.1.9", default-features = false }
rusqlite-gpkg = { git = "https://github.com/yutannihilation/rusqlite-gpkg.git", version = "0.0.1" }
geo-types = "0.7.18"

[workspace]
members = [
    "ksj2gp-cli",
    "ksj2gp-web"
]

[workspace.dependencies]
zip = { version = "7.0.0", default-features = false, features = ["deflate"] }

[patch.crates-io]
dbase = { git = "https://github.com/tmontaigu/dbase-rs" }
geo-traits = { git = "https://github.com/yutannihilation/geo", branch = "feat/geo-traits-structs", version = "0.3.0" }
