[package]
name = "ksj2gp"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib"]

[dependencies]
geo-traits = { git = "https://github.com/yutannihilation/geo", branch = "feat/geo-traits-structs", version = "0.3.0", default-features = false, features = ["structs"] }

# GeoParquet
parquet = { version = "58.1.0", default-features = false }
geoparquet = "0.8.0"

# GeoArrow-related
arrow-array = "58.1.0"
arrow-schema = "58.1.0"
geoarrow-schema = "0.8.0"
geoarrow-array = "0.8.0"
geoarrow-geojson = "0.8.0"

# Shapefile
shapefile = { version = "0.8.0", features = [
    "encoding_rs",
    "geo-traits",
    "geo-types",
] }
dbase = { version = "0.7.0", features = ["encoding_rs"] }

# Read Zip file
zip = { workspace = true }

# for .chunk()
itertools = "0.14.0"

encoding_rs = "0.8.35"
regex = { version = "1.11.3", default-features = false, features = ["std"] }
proj4rs = { version = "0.1.9", default-features = false }
rusqlite-gpkg = "0.0.4"
geo-types = "0.7.18"
serde_json = "1.0.149"

[workspace]
members = [
    "ksj2gp-cli",
    "ksj2gp-web"
]

[workspace.dependencies]
zip = { version = "8.2.0", default-features = false, features = ["deflate"] }

[patch.crates-io]
geo-traits = { git = "https://github.com/yutannihilation/geo", branch = "feat/geo-traits-structs", version = "0.3.0" }
