[package]
name = "ksj2gp-web"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
ksj2gp = { path = ".." }

zip = { workspace = true }

# WASM
wasm-bindgen = "0.2.108"
web-sys = { version = "0.3", features = [
    "File",
    "FileReaderSync",
    "FileSystemSyncAccessHandle",
    "FileSystemReadWriteOptions",
    "console",
] }
